Fixed: tiny layout issues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -310,10 +310,7 @@ li a {
  * FORM
  */
 .formHeadline {
-  padding-bottom: 7px;
-  border-bottom: 1px #17313A solid;
   text-align: center;
-  width: 102.5%;
   font-weight: lighter;
   font-size: 25px;
   color: #005A79;
